...
    case tomorrow
    case weekend
    case nextWeek

    public var label: String {
        switch self {
        case .tomorrow: "Tomorrow"
        case .weekend: "Weekend"
        case .nextWeek: "Next week"
        }
    }
}

...
